[package]
name = "aft-library"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chrono = {version = "0.4.45", default-features = false, features = ["alloc", "std", "clock", "now", "serde"]}
ratatui = "0.30.2"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
tui-input = "0.15.3"
